--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,6 +1,6 @@
 <!-- Main Footer -->
 
 <footer class="main-footer text-center">
-    <strong>Copyright &copy; 2020-2021 Elaborado por Daneidy Melenje y Zuleidy Yaruro para STAC SA.</strong><br>
+    <strong>Copyright &copy; 2020-2021 Elaborado por Daneidy Melenje y Zuleidy Yaruro para STAC S.A.S.</strong><br>
     Todos los derechos reservados.
 </footer>
