--- a/app/core/requirements/templates/lista_requerimientos_admin.html
+++ b/app/core/requirements/templates/lista_requerimientos_admin.html
@@ -10,8 +10,8 @@
 <div class="card card-dark">
     <div class="card-header">
         <h3 class="card-title">
-            <i class="fas fa-search"></i>
-            {{ title }}
+            <i class="fas fa-clipboard"></i>
+            Lista de Todos los Requerimientos
         </h3>
     </div>
     <div class="card-body">
