--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -19,7 +19,7 @@
   {% endif%}
 
     <form method="post" action="." enctype="multipart/form-data">
-        <div class="card card-primary">
+        <div class="card card-dark">
             <div class="card-header">
                 <h3 class="card-title">
                     {% if action == 'add' %}
